Bug 261762 - can not throw a file which I access via Webdav to trash
Summary: can not throw a file which I access via Webdav to trash
Status: RESOLVED FIXED
Alias: None
Product: kio
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: SVN
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: kdelibs bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-01-01 02:54 UTC by m.wege
Modified: 2013-06-25 02:43 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description m.wege 2011-01-01 02:54:14 UTC
Version:           unspecified (using KDE 4.5.90) 
OS:                Linux

I can not throw a file which I access via Webdav to trash. But it can be deleted directly.

Reproducible: Always




OS: Linux (i686) release 2.6.37-11-generic-pae
Compiler: cc
Comment 1 Dawit Alemayehu 2011-12-26 02:00:34 UTC
(In reply to comment #0)
> Version:           unspecified (using KDE 4.5.90) 
> OS:                Linux
> 
> I can not throw a file which I access via Webdav to trash. But it can be
> deleted directly.

This is not a webdav specific bug. By design, you are not allowed to "throw" a remote file into the trash bin since it makes very little sense to copy a file from a remote server into a trash bin. This is probably a WONTFIX. CC'ing David for his input...
Comment 2 m.wege 2011-12-26 05:45:45 UTC
At the moment I do not have access to my webdav and I do not remember what exactly happend. But from the usability standpoint a normal user does not now that for putting a remote into trash it would need to get copied to the local trash folder. Wouldn't it make sense to offer to delete it directly. "Remote files can not be put into the local trash folder. Should it be deleted (without the possibility of restoring it instead)?" [Yes] [No].
Comment 3 Dawit Alemayehu 2013-06-25 02:43:42 UTC
Git commit e688a52e3c84d7f1106911a80492792fd1aadd57 by Dawit Alemayehu.
Committed on 24/06/2013 at 05:11.
Pushed by adawit into branch 'master'.

Do not show "Move To Trash" action in context menu for remote URLs.
REVIEW: 111206
FIXED-IN: 4.11

M  +31   -16   dolphin/src/dolphincontextmenu.cpp
M  +1    -1    dolphin/src/dolphincontextmenu.h
M  +21   -33   dolphin/src/dolphinpart.cpp

http://commits.kde.org/kde-baseapps/e688a52e3c84d7f1106911a80492792fd1aadd57