Do not show "Move To Trash" action in context menu for remote URLs.

BUG: 261762
REVIEW: 111206
FIXED-IN: 4.11